--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,25 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300:400,600,700&display=swap");
 @import "reset.css";
 @import "status-bar.css";
-
+@import "header.css";
+@import "nav-bar.css";
+@import "friends.css";
+@import "friends2.css";
+@import "find.css";
+@import "more.css";
+@import "setting.css";
+@import "chat.css";
+* {
+  box-sizing: border-box;
+}
 body {
   background-color: white;
   padding: 10px 20px;
   color: #020202;
+}
+
+a {
+  color: inherit;
+  /*Get the color from the parent*/
+  text-decoration: none;
 }
