--- a/chat.css
+++ b/chat.css
@@ -1,30 +1,89 @@
+.header-wrapper {
+  z-index: 2;
+  /*z-index:요소의 수직 위치를 정한다*/
+  background-color: white;
+  padding: 10px 0px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  box-shadow: 0px 18px 36px -18px rgba(0, 0, 0, 0.3),
+    0px 12px 36px -8px rgba(0, 0, 0, 0.025);
+}
+
 .chats-body {
   padding: 0;
+  padding-top: 100px;
 }
 
 .chats-body .header,
 .chats-body .status-bar {
   padding: 0px 20px;
 }
-.chat-screen {
+.chats-body {
   background-image: url("../kakao-clone-v2/images/chatbg.png");
-  min-height: 100vh;
+  min-height: 1000vh;
 }
-
-.chat__write {
+.chat__write--container {
   position: fixed;
-  bottom: 50px;
-  width: 80%;
-  display: flex;
+  bottom: 0px;
   margin: 0 auto;
+  display: flex;
   left: 0;
   right: 0;
-  background-color: #fcfcfc;
   justify-content: space-between;
-  padding: 0px 20px;
   align-items: center;
+  width: 100%;
+  /*  box-shadow: 0px 18px 36px -18px rgba(0, 0, 0, 0.3),
+  0px 12px 36px -8px rgba(0, 0, 0, 0.025);*/
+}
+.chat__icon_left {
+  position: absolute;
+  left: 10px;
+}
+
+.chat__icon_right {
+  position: absolute;
+  right: 10px;
+}
+.chat__write {
+  margin: 0 auto;
+  bottom: 0px;
+  width: 100%;
+  border-radius: 0;
+  padding: 20px 60px;
+  border: none;
+  font-size: 14px;
+  transition: border-radius 0.5s ease-in-out, width 0.5s ease-in-out,
+    transform 0.5s ease-in-out;
+}
+
+.chat__write:focus {
+  outline: none;
+  width: 80%;
+  box-shadow: 0px 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0px 18px 36px -18px rgba(0, 0, 0, 0.3),
+    0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  animation: float 3s linear infinite forwards;
+  transform: translateY(-100px);
   border-radius: 40px;
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.6);
+}
+
+@keyframes float {
+  0% {
+    box-shadow: 0px 30px 60px -12px rgba(50, 50, 93, 0.25),
+      0px 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+  50% {
+    box-shadow: 0px 30px 60px -60px rgba(50, 50, 93, 0.25),
+      0px 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+  100% {
+    box-shadow: 0px 30px 60px -12px rgba(50, 50, 93, 0.25),
+      0px 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
 }
 
 .chat__write i {
@@ -35,15 +94,6 @@
   width: 80%;
 }
 
-.chat__write--column input {
-  padding: 20px 10px;
-  border: none;
-  width: 100%;
-  font-size: 14px;
-}
-.chat__write--column input:focus {
-  outline: none;
-}
 .chat-screen .chat__messages {
   padding-top: 30px;
   border: 1px solid #f7f7f7;
@@ -73,7 +123,7 @@
 }
 
 .message .message__content {
-  width: 80%;
+  width: 100%;
 }
 
 .incoming-message {
@@ -84,21 +134,46 @@
   align-self: flex-end;
 }
 
+.chat__icon {
+  font-size: 18px;
+  transition: opacity 0.3s ease-in-out;
+  /*아이콘이 input 다음에 있어야지 이런 효과를 낼수가 있다
+  css는 top-bottom방식으로 실행되기때문이다. */
+}
+
+@keyframes spin {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateY(1turn);
+  }
+}
+
 .incoming-message img {
   width: 30px;
   border-radius: 15px;
   margin-right: 15px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px, rgba(0, 0, 0, 0.24) 0px -6px 16px -6px;
+  animation: spin 1s linear infinite;
+}
+
+.chat__write:focus ~ .chat__icon {
+  opacity: 0;
 }
 
 .message .message__bubble {
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
-    rgba(0, 0, 0, 0.24) 0px -6px 16px -6px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px, rgba(0, 0, 0, 0.24) 0px -6px 16px -6px;
   padding: 10px 20px;
   border-radius: 33px;
+  display: block;
+  font-weight: 600;
 }
 
 .incoming-message .message__author {
-  margin-top: 10px;
+  margin-top: 20px;
   display: block;
   font-weight: 600;
   font-size: 12px;
@@ -106,7 +181,36 @@
 
 .incoming-message .message__bubble {
   border-bottom-left-radius: 0px;
+  background-image: linear-gradient(to left, #00d2ff, #3a7bd5);
 }
 .sent-message .message__bubble {
   border-bottom-right-radius: 0px;
+  background-image: linear-gradient(to left, #de6262, #ffb88c);
+}
+
+@keyframes incomingAnim {
+  from {
+    opacity: 0;
+    transform: translateX(-200px);
+  }
+  to {
+    opacity: 1;
+    trnasform: none;
+  }
+}
+.incoming-message {
+  animation: incomingAnim 0.5s ease-in-out forwards;
+}
+.sent-message {
+  animation: sentAnim 0.5s ease-out forwards; /*forwards means keep the values*/
+}
+@keyframes sentAnim {
+  from {
+    opacity: 0;
+    transform: translateX(+200px);
+  }
+  to {
+    opacity: 1;
+    trnasform: none;
+  }
 }
