--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,19 @@ body {
   padding: 10px 20px;
   color: #020202;
 }
-
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+main {
+  animation: fadeIn 0.5s ease-in-out;
+}
 a {
   color: inherit;
   /*Get the color from the parent*/
